fix(java): stabilize jdk25 ci paths